# RESIN

./: .env.sample  .gitignore  .gitlab-ci.yml  .prettierrc  Cargo.toml  LICENSE  README.md  app.config.ts  app.vue  ecosystem.config.js  error.vue  eslint.config.mjs  i18n.config.ts  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
app/: spa-loading-template.html
components/: BackgroundOverlay.vue  BottomBar.vue  MarkdownRenderer.vue  MenuBar.test.ts  MenuBar.vue  QRCode.vue  SafeHtml.vue
composables/: useFCM.ts  useFormatNumber.ts  useNDK.ts  useNostr.ts
e2e/: login.spec.ts  navigation.spec.ts  settings-pages.spec.ts
layouts/: default.vue  intro.vue  map.vue  startup.vue  white.vue
lib/: nostr_api.ts
listing-test/: Cargo.toml
locales/: en-US.json  nl-NL.json
middleware/: auth.ts
pages/: after-sign-in.vue  btcp.vue  choose-property-type.vue  favorites.vue  financials.vue  help.vue  home.vue  index.vue  introduction.vue  map.vue  messages.vue  my-properties.vue  my-resin.vue  terms-and-conditions.vue  (+1 more)
resin-front/: Cargo.toml  Dockerfile  Trunk.toml  index.html  manifest.json
resin-front/src/: lib.rs  main.rs  router.rs
resin-front/src/components/: drawer.rs  map_libre.rs  mod.rs  modal.rs  search_bar.rs  settings.rs
resin-front/src/contexts/: chat_provider.rs  loading_provider.rs  mod.rs  provider.rs  user_data.rs
resin-front/src/pages/: chat.rs  favorites.rs  home.rs  keys.rs  listing.rs  login.rs  mod.rs  profile.rs  search.rs  settings.rs  terms.rs
resin-front/styles/: input.css
(+142 files in other folders)
